testing fix for layout shift

--- a/src/components/footer/css/index.scss
+++ b/src/components/footer/css/index.scss
@@ -1,6 +1,7 @@
 @import "../../globals";
 
 footer {
+  display: none;
   background-color: #1a1c1e;
   margin-top: 6rem;
   border-radius: $defaultBorderRadius;
